--- a/css/style.css
+++ b/css/style.css
@@ -494,4 +494,62 @@ main .stats {
   font-family: "poppins-regular";
   line-height: 1.5; }
 
+/* main home */
+main .home {
+  border: 1px solid transparent;
+  background-image: linear-gradient(to top, rgba(38, 39, 50, 0.8), rgba(38, 39, 50, 0.8)), url(../Image/home-bg.jpeg);
+  background-position: center;
+  background-size: cover; }
+
+.home .container {
+  text-align: center; }
+
+.home h2 {
+  font-family: "libre-baskerville";
+  font-size: 60px;
+  margin: 160px 100px 42px;
+  line-height: 86px;
+  color: #fff; }
+
+.home a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 180px;
+  height: 50px;
+  margin: 0 auto;
+  background-color: #fc5f45; }
+
+.home .container div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 85px 200px;
+  margin-bottom: 166px; }
+
+.home .container a {
+  font-family: "poppins-semibold";
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #eee;
+  border-radius: 25px; }
+
+.home .container span {
+  width: 235px; }
+
+.home span p {
+  font-family: "poppins-medium";
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-top: 30px; }
+
+.home-block-left {
+  color: #38c695; }
+
+.home-block-center {
+  color: #b27cf5; }
+
+.home-block-right {
+  color: #feb960; }
+
 /*# sourceMappingURL=style.css.map */
