--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,9 +4,10 @@
 @import "fonts";
 // Наша цветовая палитра
 @import "color-pack";
-
 // Общие стили для боди и тп
 @import "_general-styles";
+
+// ============================
 
 //Стили Хедера
 @import "header";
